fix: improve navigation spacing

--- a/web/app/dashboard.style.scss
+++ b/web/app/dashboard.style.scss
@@ -64,6 +64,8 @@ kendo-chart {
 
 // Nav
 #nav {
+	padding-left: $grid-gutter-width * 1.5;
+	padding-right: $grid-gutter-width * 1.5;
 	width: 320px;
 	box-sizing: border-box;
 	flex-basis: auto;
@@ -78,13 +80,13 @@ kendo-chart {
 	}
 
 	.nav-pills {
-		margin-left: -( $grid-gutter-width / 2 );
-		margin-right: -( $grid-gutter-width / 2 );
+		margin-left: -( $grid-gutter-width * 1.5 );
+		margin-right: -( $grid-gutter-width * 1.5 );
 		font-size: 1.125rem;
 	}
 	.nav-pills .nav-link {
-		padding-left: $grid-gutter-width / 2;
-		padding-right: $grid-gutter-width / 2;
+		padding-left: $grid-gutter-width * 1.5;
+		padding-right: $grid-gutter-width * 1.5;
 	}
 	.nav-pills .nav-link:not(.active) {
 		color: inherit;
@@ -152,8 +154,10 @@ main {
 
 
 	.comp-label {
+
 		strong {
 			font-size: 4em;
+			line-height: 1;
 			font-weight: 100;
 			display: block;
 		}
